# certificate-updater

./: README.md  certificate-updater.cabal  default.nix  flake.nix  module.nix  shell.nix
.github/workflows/: build.yml
src/: Main.hs
