cabal-version:      3.4
name:               certificate-updater
version:            0.1.0.0
author:             Jordan Doyle
build-type:         Simple
license:            WTFPL
license-file:       LICENSE

common warnings
    ghc-options: -Wall

executable certificate-updater
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0,
                      optparse-generic ^>=1.4.0,
                      rio ^>=0.1.22.0,
                      aeson ^>=2.1.2.1,
                      time ^>=1.12.1.1,
                      http-conduit ^>=2.3.8.1,
                      http-types ^>=0.12.3,
                      bytestring ^>=0.11.4.0,
                      unordered-containers ^>=0.2.19.1,
                      unix ^>=2.7.2.2
    hs-source-dirs:   src
    default-language: Haskell2010
